feat: #4 - 画像をアップロードしてGPS情報を抜き取ってDBに保存するAPI作成 - 保存してある旅の記録を取得するAPI作成
