# backend/pkg/server/infra/db/conn.go
@@ -33,7 +33,7 @@ func init() {
 	// user:password@tcp(host:port)/database
 	var err error
 	Conn, err = sql.Open(driverName,
-		fmt.Sprintf("%s:%s@tcp(%s:%s)/%s", user, password, host, port, database))
+		fmt.Sprintf("%s:%s@tcp(%s:%s)/%s?parseTime=true", user, password, host, port, database))
 	if err != nil {
 		log.Fatal(err)
 	}
